[gd_scene load_steps=9 format=3 uid="uid://cr7id8f31w8jl"]

[ext_resource type="Texture2D" uid="uid://8kobprnrndrf" path="res://icon.svg" id="1_g2uwq"]
[ext_resource type="Script" path="res://main.gd" id="1_q3kcy"]
[ext_resource type="PackedScene" uid="uid://bglh1hqu3oedx" path="res://player.tscn" id="2_ayxwe"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wowr3"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_6kmus"]
sky_material = SubResource("ProceduralSkyMaterial_wowr3")

[sub_resource type="Environment" id="Environment_7ugqw"]
background_mode = 2
sky = SubResource("Sky_6kmus")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Curve3D" id="Curve3D_s762y"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 6, 2.08165e-12, -7, 0, 0, 0, 0, 0, 0, -6, 2.08165e-12, -7),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_04o2k"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -7, 2.08165e-12, -6, 0, 0, 0, 0, 0, 0, -7, 2.08165e-12, 6),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Main" type="Node3D"]
script = ExtResource("1_q3kcy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7ugqw")

[node name="Floor" type="Sprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, -4.37114e-07, 10, 0, -10, -4.37114e-07, 0, 0, 0)
modulate = Color(0.22, 0.22, 0.22, 1)
texture = ExtResource("1_g2uwq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Player1" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/Player1"]
handle_input_locally = false
size = Vector2i(574, 648)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Player2" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/Player2"]
handle_input_locally = false
size = Vector2i(574, 648)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Path1" type="Path3D" parent="."]
curve = SubResource("Curve3D_s762y")

[node name="Player1" parent="Path1" instance=ExtResource("2_ayxwe")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 2.08165e-12, -7)

[node name="Path2" type="Path3D" parent="."]
curve = SubResource("Curve3D_04o2k")

[node name="Player2" parent="Path2" instance=ExtResource("2_ayxwe")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 2.08165e-12, -6)
